Small text change

--- a/web/index.html
+++ b/web/index.html
@@ -52,7 +52,7 @@
         <textarea id="translate-input" autofocus rows="4" cols="50"></textarea>
         <div>
           <a tabindex="0" type="button" class="btn btn-success translate-submit" role="button" data-toggle="popover" data-trigger="focus"
-            title="Translating" data-content="This may take a second.">Translate</a>
+            title="Translating" data-content="This may take a second. If your browser says it is crashing, just ignore it.">Translate</a>
         </div>
 
         <br>
